engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__schema2__cost.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/schema2.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"id\" ]\n    2 [ label = \"username\" ]\n    3 [ label = \"price\" ]\n    4 [ label = \"id\" ]\n    5 [ label = \"username\" ]\n    6 [ label = \"author\" ]\n    7 [ label = \"body\" ]\n    8 [ label = \"reviews\" ]\n    9 [ label = \"products\" ]\n    10 [ label = \"cart\" ]\n    11 [ label = \"me\" ]\n    12 [ label = \"me@Root#accounts\", shape=box, style=dashed, color=blue ]\n    13 [ label = \"Root#accounts\", shape=box, color=blue ]\n    14 [ label = \"cart@Root#accounts\", shape=box, style=dashed, color=blue ]\n    15 [ label = \"products@Root#accounts\", shape=box, style=dashed, color=blue ]\n    16 [ label = \"reviews@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    17 [ label = \"FedEntity#reviews\", shape=box, color=blue ]\n    18 [ label = \"body@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    19 [ label = \"author@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    20 [ label = \"username@FedEntity#accounts\", shape=box, style=dashed, color=blue ]\n    21 [ label = \"FedEntity#accounts\", shape=box, color=blue ]\n    22 [ label = \"id@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    23 [ label = \"price@FedEntity#products\", shape=box, style=dashed, color=blue ]\n    24 [ label = \"FedEntity#products\", shape=box, color=blue ]\n    25 [ label = \"price@FedEntity#products\", shape=box, style=dashed, color=blue ]\n    26 [ label = \"FedEntity#products\", shape=box, color=blue ]\n    27 [ label = \"username@Root#accounts\", shape=box, style=dashed, color=blue ]\n    28 [ label = \"id@Root#accounts\", shape=box, style=dashed, color=blue ]\n    29 [ label = \"name\" ]\n    30 [ label = \"name@Root#accounts\", shape=box, style=dashed, color=blue ]\n    31 [ label = \"name@FedEntity#products\", shape=box, style=dashed, color=blue ]\n    32 [ label = \"upc\" ]\n    33 [ label = \"upc@FedEntity#products\", shape=box, style=dashed, color=blue ]\n    0 -> 11 [ label = \"\" ]\n    0 -> 13 [ label = <<b>Resolver:1</b>>, color=blue,fontcolor=blue ]\n    13 -> 12 [ label = \"\", color=blue,fontcolor=blue ]\n    12 -> 11 [ label = \"\", color=turquoise ]\n    11 -> 10 [ label = \"\" ]\n    14 -> 10 [ label = \"\", color=turquoise ]\n    12 -> 14 [ label = \"\", color=blue,fontcolor=blue ]\n    10 -> 9 [ label = \"\" ]\n    15 -> 9 [ label = \"\", color=turquoise ]\n    14 -> 15 [ label = \"\", color=blue,fontcolor=blue ]\n    9 -> 8 [ label = \"\" ]\n    15 -> 17 [ label = <<b>Resolver:2</b>>, color=blue,fontcolor=blue ]\n    17 -> 16 [ label = \"\", color=blue,fontcolor=blue ]\n    16 -> 8 [ label = \"\", color=turquoise ]\n    8 -> 7 [ label = \"\" ]\n    18 -> 7 [ label = \"\", color=turquoise ]\n    16 -> 18 [ label = \"\", color=blue,fontcolor=blue ]\n    8 -> 6 [ label = \"\" ]\n    19 -> 6 [ label = \"\", color=turquoise ]\n    16 -> 19 [ label = \"\", color=blue,fontcolor=blue ]\n    6 -> 5 [ label = \"\" ]\n    19 -> 21 [ label = <<b>Resolver:1</b>>, color=blue,fontcolor=blue ]\n    21 -> 20 [ label = \"\", color=blue,fontcolor=blue ]\n    20 -> 5 [ label = \"\", color=turquoise ]\n    6 -> 4 [ label = \"\" ]\n    22 -> 4 [ label = \"\", color=turquoise ]\n    19 -> 22 [ label = \"\", color=blue,fontcolor=blue ]\n    9 -> 3 [ label = \"\" ]\n    15 -> 24 [ label = <<b>Resolver:2</b>>, color=blue,fontcolor=blue ]\n    24 -> 23 [ label = \"\", color=blue,fontcolor=blue ]\n    23 -> 3 [ label = \"\", color=turquoise ]\n    15 -> 26 [ label = <<b>Resolver:1</b>>, color=blue,fontcolor=blue ]\n    26 -> 25 [ label = \"\", color=blue,fontcolor=blue ]\n    25 -> 3 [ label = \"\", color=turquoise ]\n    11 -> 2 [ label = \"\" ]\n    27 -> 2 [ label = \"\", color=turquoise ]\n    12 -> 27 [ label = \"\", color=blue,fontcolor=blue ]\n    11 -> 1 [ label = \"\" ]\n    28 -> 1 [ label = \"\", color=turquoise ]\n    12 -> 28 [ label = \"\", color=blue,fontcolor=blue ]\n    26 -> 29 [ label = \"\", color=orange ]\n    9 -> 29 [ label = \"\" ]\n    30 -> 29 [ label = \"\", color=turquoise ]\n    15 -> 30 [ label = \"\", color=blue,fontcolor=blue ]\n    24 -> 31 [ label = \"\", color=blue,fontcolor=blue ]\n    31 -> 29 [ label = \"\", color=turquoise ]\n    24 -> 32 [ label = \"\", color=orange ]\n    9 -> 32 [ label = \"\" ]\n    26 -> 33 [ label = \"\", color=blue,fontcolor=blue ]\n    33 -> 32 [ label = \"\", color=turquoise ]\n    21 -> 4 [ label = \"\", color=orange ]\n    17 -> 32 [ label = \"\", color=orange ]\n}\n"
---
digraph {
    0 [ root]
    1 [ id]
    2 [ username]
    3 [ price]
    4 [ id]
    5 [ username]
    6 [ author]
    7 [ body]
    8 [ reviews]
    9 [ products]
    10 [ cart]
    11 [ me]
    12 [ me@Root#accounts]
    13 [ Root#accounts]
    14 [ cart@Root#accounts]
    15 [ products@Root#accounts]
    16 [ reviews@FedEntity#reviews]
    17 [ FedEntity#reviews]
    18 [ body@FedEntity#reviews]
    19 [ author@FedEntity#reviews]
    20 [ username@FedEntity#accounts]
    21 [ FedEntity#accounts]
    22 [ id@FedEntity#reviews]
    23 [ price@FedEntity#products]
    24 [ FedEntity#products]
    25 [ price@FedEntity#products]
    26 [ FedEntity#products]
    27 [ username@Root#accounts]
    28 [ id@Root#accounts]
    29 [ name]
    30 [ name@Root#accounts]
    31 [ name@FedEntity#products]
    32 [ upc]
    33 [ upc@FedEntity#products]
    0 -> 11 [ label = "Field" ]
    0 -> 13 [ label = "Resolver(1)" ]
    13 -> 12 [ label = "CanResolveField(0)" ]
    12 -> 11 [ label = "Resolves" ]
    11 -> 10 [ label = "Field" ]
    14 -> 10 [ label = "Resolves" ]
    12 -> 14 [ label = "CanResolveField(0)" ]
    10 -> 9 [ label = "Field" ]
    15 -> 9 [ label = "Resolves" ]
    14 -> 15 [ label = "CanResolveField(0)" ]
    9 -> 8 [ label = "Field" ]
    15 -> 17 [ label = "Resolver(2)" ]
    17 -> 16 [ label = "CanResolveField(0)" ]
    16 -> 8 [ label = "Resolves" ]
    8 -> 7 [ label = "Field" ]
    18 -> 7 [ label = "Resolves" ]
    16 -> 18 [ label = "CanResolveField(0)" ]
    8 -> 6 [ label = "Field" ]
    19 -> 6 [ label = "Resolves" ]
    16 -> 19 [ label = "CanResolveField(0)" ]
    6 -> 5 [ label = "Field" ]
    19 -> 21 [ label = "Resolver(1)" ]
    21 -> 20 [ label = "CanResolveField(0)" ]
    20 -> 5 [ label = "Resolves" ]
    6 -> 4 [ label = "Field" ]
    22 -> 4 [ label = "Resolves" ]
    19 -> 22 [ label = "CanResolveField(0)" ]
    9 -> 3 [ label = "Field" ]
    15 -> 24 [ label = "Resolver(2)" ]
    24 -> 23 [ label = "CanResolveField(0)" ]
    23 -> 3 [ label = "Resolves" ]
    15 -> 26 [ label = "Resolver(1)" ]
    26 -> 25 [ label = "CanResolveField(0)" ]
    25 -> 3 [ label = "Resolves" ]
    11 -> 2 [ label = "Field" ]
    27 -> 2 [ label = "Resolves" ]
    12 -> 27 [ label = "CanResolveField(0)" ]
    11 -> 1 [ label = "Field" ]
    28 -> 1 [ label = "Resolves" ]
    12 -> 28 [ label = "CanResolveField(0)" ]
    26 -> 29 [ label = "Requires" ]
    9 -> 29 [ label = "Field" ]
    30 -> 29 [ label = "Resolves" ]
    15 -> 30 [ label = "CanResolveField(0)" ]
    24 -> 31 [ label = "CanResolveField(0)" ]
    31 -> 29 [ label = "Resolves" ]
    24 -> 32 [ label = "Requires" ]
    9 -> 32 [ label = "Field" ]
    26 -> 33 [ label = "CanResolveField(0)" ]
    33 -> 32 [ label = "Resolves" ]
    21 -> 4 [ label = "Requires" ]
    17 -> 32 [ label = "Requires" ]
}
