engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__schema2__graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/schema2.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"id\" ]\n    2 [ label = \"username\" ]\n    3 [ label = \"price\" ]\n    4 [ label = \"id\" ]\n    5 [ label = \"username\" ]\n    6 [ label = \"author\" ]\n    7 [ label = \"body\" ]\n    8 [ label = \"reviews\" ]\n    9 [ label = \"products\" ]\n    10 [ label = \"cart\" ]\n    11 [ label = \"me\" ]\n    12 [ label = \"Root#accounts\", shape=box, color=blue ]\n    13 [ label = \"me@Root#accounts\", shape=box, style=dashed, color=blue ]\n    14 [ label = \"cart@Root#accounts\", shape=box, style=dashed, color=blue ]\n    15 [ label = \"products@Root#accounts\", shape=box, style=dashed, color=blue ]\n    16 [ label = \"FedEntity#reviews\", shape=box, color=blue ]\n    17 [ label = \"reviews@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    18 [ label = \"body@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    19 [ label = \"author@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    20 [ label = \"FedEntity#accounts\", shape=box, color=blue ]\n    21 [ label = \"username@FedEntity#accounts\", shape=box, style=dashed, color=blue ]\n    22 [ label = \"id@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    23 [ label = \"FedEntity#products\", shape=box, color=blue ]\n    24 [ label = \"price@FedEntity#products\", shape=box, style=dashed, color=blue ]\n    25 [ label = \"FedEntity#products\", shape=box, color=blue ]\n    26 [ label = \"price@FedEntity#products\", shape=box, style=dashed, color=blue ]\n    27 [ label = \"username@Root#accounts\", shape=box, style=dashed, color=blue ]\n    28 [ label = \"id@Root#accounts\", shape=box, style=dashed, color=blue ]\n    29 [ label = \"*name\" ]\n    30 [ label = \"name@Root#accounts\", shape=box, style=dashed, color=blue ]\n    31 [ label = \"name@FedEntity#products\", shape=box, style=dashed, color=blue ]\n    32 [ label = \"*upc\" ]\n    33 [ label = \"upc@FedEntity#products\", shape=box, style=dashed, color=blue ]\n    0 -> 11 [ label = \"\" ]\n    0 -> 12 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 12 [ label = \"\", style=dashed ]\n    12 -> 13 [ label = \"\", color=blue,fontcolor=blue ]\n    13 -> 11 [ label = \"\", color=turquoise ]\n    11 -> 10 [ label = \"\" ]\n    13 -> 14 [ label = \"\", color=blue,fontcolor=blue ]\n    14 -> 10 [ label = \"\", color=turquoise ]\n    10 -> 9 [ label = \"\" ]\n    14 -> 15 [ label = \"\", color=blue,fontcolor=blue ]\n    15 -> 9 [ label = \"\", color=turquoise ]\n    9 -> 8 [ label = \"\" ]\n    15 -> 16 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    9 -> 16 [ label = \"\", style=dashed ]\n    16 -> 17 [ label = \"\", color=blue,fontcolor=blue ]\n    17 -> 8 [ label = \"\", color=turquoise ]\n    8 -> 7 [ label = \"\" ]\n    17 -> 18 [ label = \"\", color=blue,fontcolor=blue ]\n    18 -> 7 [ label = \"\", color=turquoise ]\n    8 -> 6 [ label = \"\" ]\n    17 -> 19 [ label = \"\", color=blue,fontcolor=blue ]\n    19 -> 6 [ label = \"\", color=turquoise ]\n    6 -> 5 [ label = \"\" ]\n    19 -> 20 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    6 -> 20 [ label = \"\", style=dashed ]\n    20 -> 21 [ label = \"\", color=blue,fontcolor=blue ]\n    21 -> 5 [ label = \"\", color=turquoise ]\n    6 -> 4 [ label = \"\" ]\n    19 -> 22 [ label = \"\", color=blue,fontcolor=blue ]\n    22 -> 4 [ label = \"\", color=turquoise ]\n    9 -> 3 [ label = \"\" ]\n    15 -> 23 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    9 -> 23 [ label = \"\", style=dashed ]\n    23 -> 24 [ label = \"\", color=blue,fontcolor=blue ]\n    24 -> 3 [ label = \"\", color=turquoise ]\n    15 -> 25 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    9 -> 25 [ label = \"\", style=dashed ]\n    25 -> 26 [ label = \"\", color=blue,fontcolor=blue ]\n    26 -> 3 [ label = \"\", color=turquoise ]\n    11 -> 2 [ label = \"\" ]\n    13 -> 27 [ label = \"\", color=blue,fontcolor=blue ]\n    27 -> 2 [ label = \"\", color=turquoise ]\n    11 -> 1 [ label = \"\" ]\n    13 -> 28 [ label = \"\", color=blue,fontcolor=blue ]\n    28 -> 1 [ label = \"\", color=turquoise ]\n    25 -> 29 [ label = \"\", color=orange ]\n    9 -> 29 [ label = \"\" ]\n    15 -> 30 [ label = \"\", color=blue,fontcolor=blue ]\n    30 -> 29 [ label = \"\", color=turquoise ]\n    23 -> 31 [ label = \"\", color=blue,fontcolor=blue ]\n    31 -> 29 [ label = \"\", color=turquoise ]\n    23 -> 32 [ label = \"\", color=orange ]\n    9 -> 32 [ label = \"\" ]\n    25 -> 33 [ label = \"\", color=blue,fontcolor=blue ]\n    33 -> 32 [ label = \"\", color=turquoise ]\n    20 -> 4 [ label = \"\", color=orange ]\n    16 -> 32 [ label = \"\", color=orange ]\n}\n"
---
digraph {
    0 [ root]
    1 [ id]
    2 [ username]
    3 [ price]
    4 [ id]
    5 [ username]
    6 [ author]
    7 [ body]
    8 [ reviews]
    9 [ products]
    10 [ cart]
    11 [ me]
    12 [ Root#accounts]
    13 [ me@Root#accounts]
    14 [ cart@Root#accounts]
    15 [ products@Root#accounts]
    16 [ FedEntity#reviews]
    17 [ reviews@FedEntity#reviews]
    18 [ body@FedEntity#reviews]
    19 [ author@FedEntity#reviews]
    20 [ FedEntity#accounts]
    21 [ username@FedEntity#accounts]
    22 [ id@FedEntity#reviews]
    23 [ FedEntity#products]
    24 [ price@FedEntity#products]
    25 [ FedEntity#products]
    26 [ price@FedEntity#products]
    27 [ username@Root#accounts]
    28 [ id@Root#accounts]
    29 [ *name]
    30 [ name@Root#accounts]
    31 [ name@FedEntity#products]
    32 [ *upc]
    33 [ upc@FedEntity#products]
    0 -> 11 [ label = "Field" ]
    0 -> 12 [ label = "CreateChildResolver", cost=1 ]
    0 -> 12 [ label = "HasChildResolver" ]
    12 -> 13 [ label = "CanProvide", cost=0 ]
    13 -> 11 [ label = "Provides" ]
    11 -> 10 [ label = "Field" ]
    13 -> 14 [ label = "CanProvide", cost=0 ]
    14 -> 10 [ label = "Provides" ]
    10 -> 9 [ label = "Field" ]
    14 -> 15 [ label = "CanProvide", cost=0 ]
    15 -> 9 [ label = "Provides" ]
    9 -> 8 [ label = "Field" ]
    15 -> 16 [ label = "CreateChildResolver", cost=1 ]
    9 -> 16 [ label = "HasChildResolver" ]
    16 -> 17 [ label = "CanProvide", cost=0 ]
    17 -> 8 [ label = "Provides" ]
    8 -> 7 [ label = "Field" ]
    17 -> 18 [ label = "CanProvide", cost=0 ]
    18 -> 7 [ label = "Provides" ]
    8 -> 6 [ label = "Field" ]
    17 -> 19 [ label = "CanProvide", cost=0 ]
    19 -> 6 [ label = "Provides" ]
    6 -> 5 [ label = "Field" ]
    19 -> 20 [ label = "CreateChildResolver", cost=1 ]
    6 -> 20 [ label = "HasChildResolver" ]
    20 -> 21 [ label = "CanProvide", cost=0 ]
    21 -> 5 [ label = "Provides" ]
    6 -> 4 [ label = "Field" ]
    19 -> 22 [ label = "CanProvide", cost=0 ]
    22 -> 4 [ label = "Provides" ]
    9 -> 3 [ label = "Field" ]
    15 -> 23 [ label = "CreateChildResolver", cost=1 ]
    9 -> 23 [ label = "HasChildResolver" ]
    23 -> 24 [ label = "CanProvide", cost=0 ]
    24 -> 3 [ label = "Provides" ]
    15 -> 25 [ label = "CreateChildResolver", cost=1 ]
    9 -> 25 [ label = "HasChildResolver" ]
    25 -> 26 [ label = "CanProvide", cost=0 ]
    26 -> 3 [ label = "Provides" ]
    11 -> 2 [ label = "Field" ]
    13 -> 27 [ label = "CanProvide", cost=0 ]
    27 -> 2 [ label = "Provides" ]
    11 -> 1 [ label = "Field" ]
    13 -> 28 [ label = "CanProvide", cost=0 ]
    28 -> 1 [ label = "Provides" ]
    25 -> 29 [ label = "Requires" ]
    9 -> 29 [ label = "Field" ]
    15 -> 30 [ label = "CanProvide", cost=0 ]
    30 -> 29 [ label = "Provides" ]
    23 -> 31 [ label = "CanProvide", cost=0 ]
    31 -> 29 [ label = "Provides" ]
    23 -> 32 [ label = "Requires" ]
    9 -> 32 [ label = "Field" ]
    25 -> 33 [ label = "CanProvide", cost=0 ]
    33 -> 32 [ label = "Provides" ]
    20 -> 4 [ label = "Requires" ]
    16 -> 32 [ label = "Requires" ]
}
