engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__schema2__solved-graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/schema2.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"id\" ]\n    2 [ label = \"username\" ]\n    3 [ label = \"price\" ]\n    4 [ label = \"id\" ]\n    5 [ label = \"username\" ]\n    7 [ label = \"body\" ]\n    12 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue ]\n    13 [ label = \"me@Root#accounts\", shape=box, color=dodgerblue ]\n    14 [ label = \"cart@Root#accounts\", shape=box, color=dodgerblue ]\n    15 [ label = \"products@Root#accounts\", shape=box, color=dodgerblue ]\n    16 [ label = \"FedEntity#reviews\", shape=parallelogram, color=dodgerblue ]\n    17 [ label = \"reviews@FedEntity#reviews\", shape=box, color=dodgerblue ]\n    18 [ label = \"body@FedEntity#reviews\", shape=box, color=dodgerblue ]\n    19 [ label = \"author@FedEntity#reviews\", shape=box, color=dodgerblue ]\n    20 [ label = \"FedEntity#accounts\", shape=parallelogram, color=dodgerblue ]\n    21 [ label = \"username@FedEntity#accounts\", shape=box, color=dodgerblue ]\n    22 [ label = \"id@FedEntity#reviews\", shape=box, color=dodgerblue ]\n    25 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue ]\n    26 [ label = \"price@FedEntity#products\", shape=box, color=dodgerblue ]\n    27 [ label = \"username@Root#accounts\", shape=box, color=dodgerblue ]\n    28 [ label = \"id@Root#accounts\", shape=box, color=dodgerblue ]\n    29 [ label = \"*name\" ]\n    30 [ label = \"name@Root#accounts\", shape=box, color=dodgerblue ]\n    32 [ label = \"*upc\" ]\n    33 [ label = \"upc@FedEntity#products\", shape=box, color=dodgerblue ]\n    0 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 12 [ label = \"\", style=dashed,arrowhead=none ]\n    12 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    16 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    17 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    18 -> 7 [ label = \"\", color=violet,arrowhead=none ]\n    17 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    19 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    20 -> 21 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    21 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    19 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    22 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    15 -> 25 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    25 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    26 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    13 -> 27 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    27 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    13 -> 28 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    28 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    25 -> 29 [ label = \"\", color=orangered,arrowhead=inv ]\n    15 -> 30 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    30 -> 29 [ label = \"\", color=violet,arrowhead=none ]\n    25 -> 33 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    33 -> 32 [ label = \"\", color=violet,arrowhead=none ]\n    20 -> 4 [ label = \"\", color=orangered,arrowhead=inv ]\n    16 -> 32 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ root]
    1 [ id]
    2 [ username]
    3 [ price]
    4 [ id]
    5 [ username]
    7 [ body]
    12 [ Root#accounts]
    13 [ me@Root#accounts]
    14 [ cart@Root#accounts]
    15 [ products@Root#accounts]
    16 [ FedEntity#reviews]
    17 [ reviews@FedEntity#reviews]
    18 [ body@FedEntity#reviews]
    19 [ author@FedEntity#reviews]
    20 [ FedEntity#accounts]
    21 [ username@FedEntity#accounts]
    22 [ id@FedEntity#reviews]
    25 [ FedEntity#products]
    26 [ price@FedEntity#products]
    27 [ username@Root#accounts]
    28 [ id@Root#accounts]
    29 [ *name]
    30 [ name@Root#accounts]
    32 [ *upc]
    33 [ upc@FedEntity#products]
    0 -> 12 [ label = "CreateChildResolver" ]
    0 -> 12 [ label = "HasChildResolver" ]
    12 -> 13 [ label = "CanProvide" ]
    13 -> 14 [ label = "CanProvide" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 16 [ label = "CreateChildResolver" ]
    16 -> 17 [ label = "CanProvide" ]
    17 -> 18 [ label = "CanProvide" ]
    18 -> 7 [ label = "Provides" ]
    17 -> 19 [ label = "CanProvide" ]
    19 -> 20 [ label = "CreateChildResolver" ]
    20 -> 21 [ label = "CanProvide" ]
    21 -> 5 [ label = "Provides" ]
    19 -> 22 [ label = "CanProvide" ]
    22 -> 4 [ label = "Provides" ]
    15 -> 25 [ label = "CreateChildResolver" ]
    25 -> 26 [ label = "CanProvide" ]
    26 -> 3 [ label = "Provides" ]
    13 -> 27 [ label = "CanProvide" ]
    27 -> 2 [ label = "Provides" ]
    13 -> 28 [ label = "CanProvide" ]
    28 -> 1 [ label = "Provides" ]
    25 -> 29 [ label = "Requires" ]
    15 -> 30 [ label = "CanProvide" ]
    30 -> 29 [ label = "Provides" ]
    25 -> 33 [ label = "CanProvide" ]
    33 -> 32 [ label = "Provides" ]
    20 -> 4 [ label = "Requires" ]
    16 -> 32 [ label = "Requires" ]
}
