engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__schema2__solved.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/schema2.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"id\", color=forestgreen ]\n    2 [ label = \"username\", color=forestgreen ]\n    3 [ label = \"price\", color=forestgreen ]\n    4 [ label = \"id\", color=forestgreen ]\n    5 [ label = \"username\", color=forestgreen ]\n    6 [ label = \"body\", color=forestgreen ]\n    7 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"me@Root#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    9 [ label = \"cart@Root#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    10 [ label = \"products@Root#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    11 [ label = \"FedEntity#reviews\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    12 [ label = \"reviews@FedEntity#reviews\", shape=box, color=dodgerblue, color=forestgreen ]\n    13 [ label = \"body@FedEntity#reviews\", shape=box, color=dodgerblue, color=forestgreen ]\n    14 [ label = \"author@FedEntity#reviews\", shape=box, color=dodgerblue, color=forestgreen ]\n    15 [ label = \"FedEntity#accounts\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    16 [ label = \"username@FedEntity#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    17 [ label = \"id@FedEntity#reviews\", shape=box, color=dodgerblue, color=forestgreen ]\n    18 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    19 [ label = \"price@FedEntity#products\", shape=box, color=dodgerblue, style=dashed ]\n    20 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    21 [ label = \"price@FedEntity#products\", shape=box, color=dodgerblue, color=forestgreen ]\n    22 [ label = \"username@Root#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    23 [ label = \"id@Root#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    24 [ label = \"*name\", color=forestgreen ]\n    25 [ label = \"name@Root#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    26 [ label = \"name@FedEntity#products\", shape=box, color=dodgerblue, style=dashed ]\n    27 [ label = \"*upc\", color=forestgreen ]\n    28 [ label = \"upc@FedEntity#products\", shape=box, color=dodgerblue, color=forestgreen ]\n    29 [ label=\"\", style=dashed]\n    0 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 9 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 10 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 11 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    11 -> 12 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    12 -> 13 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    13 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    12 -> 14 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    14 -> 15 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    15 -> 16 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    16 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    14 -> 17 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    17 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 18 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 20 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    20 -> 21 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    21 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 22 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    22 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 23 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    23 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 25 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    25 -> 24 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    18 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    26 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    20 -> 28 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    28 -> 27 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    29 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "id", steiner=1 ]
    2 [ label = "username", steiner=1 ]
    3 [ label = "price", steiner=1 ]
    4 [ label = "id", steiner=1 ]
    5 [ label = "username", steiner=1 ]
    6 [ label = "body", steiner=1 ]
    7 [ label = "Root#accounts", steiner=1 ]
    8 [ label = "me@Root#accounts", steiner=1 ]
    9 [ label = "cart@Root#accounts", steiner=1 ]
    10 [ label = "products@Root#accounts", steiner=1 ]
    11 [ label = "FedEntity#reviews", steiner=1 ]
    12 [ label = "reviews@FedEntity#reviews", steiner=1 ]
    13 [ label = "body@FedEntity#reviews", steiner=1 ]
    14 [ label = "author@FedEntity#reviews", steiner=1 ]
    15 [ label = "FedEntity#accounts", steiner=1 ]
    16 [ label = "username@FedEntity#accounts", steiner=1 ]
    17 [ label = "id@FedEntity#reviews", steiner=1 ]
    18 [ label = "FedEntity#products", steiner=0 ]
    19 [ label = "price@FedEntity#products", steiner=0 ]
    20 [ label = "FedEntity#products", steiner=1 ]
    21 [ label = "price@FedEntity#products", steiner=1 ]
    22 [ label = "username@Root#accounts", steiner=1 ]
    23 [ label = "id@Root#accounts", steiner=1 ]
    24 [ label = "*name", steiner=1 ]
    25 [ label = "name@Root#accounts", steiner=1 ]
    26 [ label = "name@FedEntity#products", steiner=0 ]
    27 [ label = "*upc", steiner=1 ]
    28 [ label = "upc@FedEntity#products", steiner=1 ]
    29 [ label="", style=dashed]
    0 -> 7 [ cost=0, steiner=1]
    7 -> 8 [ cost=0, steiner=1]
    8 -> 9 [ cost=0, steiner=1]
    9 -> 10 [ cost=0, steiner=1]
    10 -> 11 [ cost=0, steiner=1]
    11 -> 12 [ cost=0, steiner=1]
    12 -> 13 [ cost=0, steiner=1]
    13 -> 6 [ cost=0, steiner=1]
    12 -> 14 [ cost=0, steiner=1]
    14 -> 15 [ cost=0, steiner=1]
    15 -> 16 [ cost=0, steiner=1]
    16 -> 5 [ cost=0, steiner=1]
    14 -> 17 [ cost=0, steiner=1]
    17 -> 4 [ cost=0, steiner=1]
    10 -> 18 [ cost=1, steiner=0]
    18 -> 19 [ cost=0, steiner=0]
    19 -> 3 [ cost=0, steiner=0]
    10 -> 20 [ cost=0, steiner=1]
    20 -> 21 [ cost=0, steiner=1]
    21 -> 3 [ cost=0, steiner=1]
    8 -> 22 [ cost=0, steiner=1]
    22 -> 2 [ cost=0, steiner=1]
    8 -> 23 [ cost=0, steiner=1]
    23 -> 1 [ cost=0, steiner=1]
    10 -> 25 [ cost=0, steiner=1]
    25 -> 24 [ cost=0, steiner=1]
    18 -> 26 [ cost=0, steiner=0]
    26 -> 24 [ cost=0, steiner=0]
    20 -> 28 [ cost=0, steiner=1]
    28 -> 27 [ cost=0, steiner=1]
    29 -> 0 [ cost=0, steiner=0]
}
