engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__schema2__solver.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/schema2.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"id\", style=dashed ]\n    2 [ label = \"username\", style=dashed ]\n    3 [ label = \"price\", style=dashed ]\n    4 [ label = \"id\", style=dashed ]\n    5 [ label = \"username\", style=dashed ]\n    6 [ label = \"body\", style=dashed ]\n    7 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    8 [ label = \"me@Root#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"cart@Root#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"products@Root#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"FedEntity#reviews\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    12 [ label = \"reviews@FedEntity#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"body@FedEntity#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    14 [ label = \"author@FedEntity#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label = \"FedEntity#accounts\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    16 [ label = \"username@FedEntity#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    17 [ label = \"id@FedEntity#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    18 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    19 [ label = \"price@FedEntity#products\", shape=box, color=dodgerblue, style=dashed ]\n    20 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    21 [ label = \"price@FedEntity#products\", shape=box, color=dodgerblue, style=dashed ]\n    22 [ label = \"username@Root#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    23 [ label = \"id@Root#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    24 [ label = \"*name\", style=dashed ]\n    25 [ label = \"name@Root#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    26 [ label = \"name@FedEntity#products\", shape=box, color=dodgerblue, style=dashed ]\n    27 [ label = \"*upc\", style=dashed ]\n    28 [ label = \"upc@FedEntity#products\", shape=box, color=dodgerblue, style=dashed ]\n    29 [ label=\"\", style=dashed]\n    0 -> 7 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 11 [ label = <<b>2</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 15 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 18 [ label = <<b>2</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 20 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    20 -> 21 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    21 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    22 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 23 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 25 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    25 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    26 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    20 -> 28 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    28 -> 27 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    29 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "id", steiner=0 ]
    2 [ label = "username", steiner=0 ]
    3 [ label = "price", steiner=0 ]
    4 [ label = "id", steiner=0 ]
    5 [ label = "username", steiner=0 ]
    6 [ label = "body", steiner=0 ]
    7 [ label = "Root#accounts", steiner=0 ]
    8 [ label = "me@Root#accounts", steiner=0 ]
    9 [ label = "cart@Root#accounts", steiner=0 ]
    10 [ label = "products@Root#accounts", steiner=0 ]
    11 [ label = "FedEntity#reviews", steiner=0 ]
    12 [ label = "reviews@FedEntity#reviews", steiner=0 ]
    13 [ label = "body@FedEntity#reviews", steiner=0 ]
    14 [ label = "author@FedEntity#reviews", steiner=0 ]
    15 [ label = "FedEntity#accounts", steiner=0 ]
    16 [ label = "username@FedEntity#accounts", steiner=0 ]
    17 [ label = "id@FedEntity#reviews", steiner=0 ]
    18 [ label = "FedEntity#products", steiner=0 ]
    19 [ label = "price@FedEntity#products", steiner=0 ]
    20 [ label = "FedEntity#products", steiner=0 ]
    21 [ label = "price@FedEntity#products", steiner=0 ]
    22 [ label = "username@Root#accounts", steiner=0 ]
    23 [ label = "id@Root#accounts", steiner=0 ]
    24 [ label = "*name", steiner=0 ]
    25 [ label = "name@Root#accounts", steiner=0 ]
    26 [ label = "name@FedEntity#products", steiner=0 ]
    27 [ label = "*upc", steiner=0 ]
    28 [ label = "upc@FedEntity#products", steiner=0 ]
    29 [ label="", style=dashed]
    0 -> 7 [ cost=1, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 9 [ cost=0, steiner=0]
    9 -> 10 [ cost=0, steiner=0]
    10 -> 11 [ cost=2, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 13 [ cost=0, steiner=0]
    13 -> 6 [ cost=0, steiner=0]
    12 -> 14 [ cost=0, steiner=0]
    14 -> 15 [ cost=1, steiner=0]
    15 -> 16 [ cost=0, steiner=0]
    16 -> 5 [ cost=0, steiner=0]
    14 -> 17 [ cost=0, steiner=0]
    17 -> 4 [ cost=0, steiner=0]
    10 -> 18 [ cost=2, steiner=0]
    18 -> 19 [ cost=0, steiner=0]
    19 -> 3 [ cost=0, steiner=0]
    10 -> 20 [ cost=1, steiner=0]
    20 -> 21 [ cost=0, steiner=0]
    21 -> 3 [ cost=0, steiner=0]
    8 -> 22 [ cost=0, steiner=0]
    22 -> 2 [ cost=0, steiner=0]
    8 -> 23 [ cost=0, steiner=0]
    23 -> 1 [ cost=0, steiner=0]
    10 -> 25 [ cost=0, steiner=0]
    25 -> 24 [ cost=0, steiner=0]
    18 -> 26 [ cost=0, steiner=0]
    26 -> 24 [ cost=0, steiner=0]
    20 -> 28 [ cost=0, steiner=0]
    28 -> 27 [ cost=0, steiner=0]
    29 -> 0 [ cost=0, steiner=0]
}
